# DeltaG

./: .gitignore  CONFIG_SCHEMA.md  README.md  pyproject.toml
Gibbs_energy/: ROADMAP.md  __main__.py  calculators.py  config_utils.py  constants.py  io_utils.py  main.py  molecule_thermo.py  patch_thermo.py  phonons_bulk.py  phonons_fixed_cell.py  qha_post.py  structures.py  thermo_bulk.py  thermo_fixed_cell.py
bulk_thermo/: ROADMAP.md  __main__.py  config_utils.py  main.py  structures.py
examples/: bulk.yaml  fixed_cell.yaml  molecule.yaml  patch.yaml  qha_post.yaml
